# sphinx-a4doc

./: .buildinfo  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  push_docs.py  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-prod.yml  build-release-and-upload.yml  build-testing.yml  publish-to-test-pypi.yml
_sources/: index.rst.txt
_static/: a4_railroad_diagram_latex.css
antlr_doc/: __init__.py  diagram_directive.py  domain.py
antlr_doc/contrib/: railroad_diagrams.py
antlr_doc/model/: impl.py  model.py  model_renderer.py  visitor.py
antlr_doc/syntax/: ANTLRv4Lexer.g4
docs/: Makefile  make.bat
docs/examples/: Json.g4
docs/source/: conf.py  index.rst
docs/source/_templates/: to_github.html
sphinx_a4doc/: __init__.py  autodoc_directive.py  diagram_directive.py  domain.py  out.html  settings.py  test.g4  test.py
sphinx_a4doc/_static/: a4_railroad_diagram.css
sphinx_a4doc/contrib/: configurator.py  railroad_diagrams.py  rst_autodoc.py
sphinx_a4doc/model/: impl.py  model.py  model_renderer.py  reachable_finder.py  visitor.py
sphinx_a4doc/syntax/: ANTLRv4Lexer.g4  ANTLRv4Parser.g4  LexBasic.g4
