[metadata]
name = sphinx-a4doc
description = Sphinx domain and autodoc for Antlr4 grammars
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = '>=3.7'
author = Tamika Nomara
author_email = taminomara@gmail.com
url = https://github.com/taminomara/sphinx-a4doc
license = MIT
keywords = sphinx antlr4 autodoc
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Topic :: Software Development :: Documentation
    Topic :: Documentation
    Topic :: Documentation :: Sphinx

[options]
zip_safe = False
include_package_data = True
install_requires =
    sphinx>=1.8.0
    antlr4-python3-runtime==4.7.1
    PyYAML
setup_requires =
    setuptools-scm>=3.5.0
    setuptools>=42.0
    wheel
    pep517
packages = find:

[options.package_data]
sphinx_a4doc =
    _static/a4_railroad_diagram.css
